force-app/main/default/objects/Work_Calendar__c/Work_Calendar__c.object-meta.xml
<CustomObject>
    <label>Work Calendar</label>
    <nameField>
        <label>Work Calendar Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Calendar</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>