force-app/main/default/objects/Work_Calendar__c/fields/Assignment__c.field-meta.xml
<CustomField>
    <fullName>Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assignment</label>
    <referenceTo>Assignment__c</referenceTo>
    <relationshipLabel>Work Calendar</relationshipLabel>
    <relationshipName>Work_Calendar</relationshipName>
    <type>Lookup</type>
</CustomField>