force-app/main/default/objects/Work_Calendar__c/fields/Friday_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Friday_End_Time__c</fullName>
    <label>Friday End Time</label>
    <type>DateTime</type>
</CustomField>