force-app/main/default/objects/Work_Calendar__c/fields/Friday_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Friday_Start_Time__c</fullName>
    <label>Friday Start Time</label>
    <type>DateTime</type>
</CustomField>