force-app/main/default/objects/Work_Calendar__c/fields/Monday_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Monday_End_Time__c</fullName>
    <label>Monday End Time</label>
    <type>DateTime</type>
</CustomField>