force-app/main/default/objects/Work_Calendar__c/fields/Monday_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Monday_Start_Time__c</fullName>
    <label>Monday Start Time</label>
    <type>DateTime</type>
</CustomField>