force-app/main/default/objects/Work_Calendar__c/fields/Saturday_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Saturday_Start_Time__c</fullName>
    <label>Saturday Start Time</label>
    <type>DateTime</type>
</CustomField>