force-app/main/default/objects/Work_Calendar__c/fields/Thursday_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Thursday_End_Time__c</fullName>
    <label>Thursday End Time</label>
    <type>DateTime</type>
</CustomField>