force-app/main/default/objects/Work_Calendar__c/fields/Thursday_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Thursday_Start_Time__c</fullName>
    <label>Thursday Start Time</label>
    <type>DateTime</type>
</CustomField>