force-app/main/default/objects/Work_Calendar__c/fields/Tuesday_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_End_Time__c</fullName>
    <label>Tuesday End Time</label>
    <type>DateTime</type>
</CustomField>