force-app/main/default/objects/Work_Calendar__c/fields/Tuesday_Hours__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Hours__c</fullName>
    <label>Tuesday Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>