force-app/main/default/objects/Work_Calendar__c/fields/Tuesday_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Tuesday_Start_Time__c</fullName>
    <label>Tuesday Start Time</label>
    <type>DateTime</type>
</CustomField>