force-app/main/default/objects/Work_Calendar__c/fields/Wednesday_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_End_Time__c</fullName>
    <label>Wednesday End Time</label>
    <type>DateTime</type>
</CustomField>