force-app/main/default/objects/Work_Calendar__c/fields/Wednesday_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Wednesday_Start_Time__c</fullName>
    <label>Wednesday Start Time</label>
    <type>DateTime</type>
</CustomField>