force-app/main/default/objects/Work_Calendar__c/fields/Week_Start_Day__c.field-meta.xml
<CustomField>
    <fullName>Week_Start_Day__c</fullName>
    <label>Week Start Day</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Weekdays</valueSetName>
    </valueSet>
</CustomField>